name:                vasp-poscar
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/ExpHP/vasp-poscar#readme
license:             BSD3
license-file:        LICENSE
author:              Michael Lamparski
maintainer:          diagonaldevice@gmail.com
copyright:           Copyright 2017 Michael Lamparski
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.Vasp.Poscar
  build-depends:       base >= 4.7 && < 5
               ,       vector
               ,       text
               ,       mtl
  default-language:    Haskell2010

test-suite vasp-poscar-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , vasp-poscar
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/ExpHP/vasp-poscar
